#9013 [문서 양식] Import 팝업 첨부파일 다국어 오류 외 1건
- import 부분을 제거 했습니다.
- 에러 메시지가 2중(?)으로 나오는 오류, acceptedFiles 옵션 오류, 아바타일 경우 파일 drag & drop일 경우 최종 파일이 올라 갈 수 있도록 수정 부분을 반영 했습니다.
- fileuploader-alice-portal에도 반영 했습니다.

--- a/src/main/resources/public/template/process/processImport.html
+++ b/src/main/resources/public/template/process/processImport.html
@@ -34,7 +34,15 @@
     <script type="text/javascript">
         /*<![CDATA[*/
         window.onload = function () {
-            fileUploader.import({extra: {formId: 'importProcess', dropZoneMaxFiles: 1}});
+            fileUploader.init({
+                extra: {
+                    formId: 'importProcess',
+                    dropZoneMaxFiles: 1,
+                    acceptedFiles: '.xml',
+                    dropZoneUrl: '/fileupload?target=import',
+                    editor: true
+                }
+            });
             OverlayScrollbars(document.getElementById('process_desc'), {className: 'inner-scrollbar'});
         };
 
