--- a/src/main/resources/public/template/form/formImport.html
+++ b/src/main/resources/public/template/form/formImport.html
@@ -34,7 +34,15 @@
     <script type="text/javascript">
         /*<![CDATA[*/
         window.onload = function () {
-            fileUploader.import({extra: {formId: 'importForm', dropZoneMaxFiles: 1}});
+            fileUploader.init({
+                extra: {
+                    formId: 'importForm',
+                    dropZoneMaxFiles: 1,
+                    acceptedFiles: '.xml',
+                    dropZoneUrl: '/fileupload?target=import',
+                    editor: true
+                }
+            });
             OverlayScrollbars(document.getElementById('form_desc'), {className: 'inner-scrollbar'});
         };
 
