--- a/src/main/resources/public/assets/css/form-designer.css
+++ b/src/main/resources/public/assets/css/form-designer.css
@@ -352,7 +352,7 @@ body {
   flex-direction: column;
   left: 0;
   float: left;
-  min-width: auto;
+  min-width: 100vw;
   height: 100vh;
   min-height: 100vh;
   padding: 0;
@@ -368,14 +368,11 @@ body {
   /* Chrome, Safari, Opera*/
 }
 .container-print .contents .print-area {
-  margin-top: 1rem;
-  display: flex;
   justify-content: center;
-  width: 100vw;
 }
 .container-print .contents .print-board {
   margin: 0.9375rem;
-  height: 2.813rem;
+  height: 4.5rem;
 }
 .container-print .contents .print-board span {
   float: right;
@@ -386,6 +383,7 @@ body {
   text-align: right;
 }
 .container-print .contents .drawing-board {
+  margin: 0 auto;
   display: table;
   width: 61.56rem;
   max-width: 61.56rem;
