--- a/src/main/resources/public/src/scss/form/_layout.scss
+++ b/src/main/resources/public/src/scss/form/_layout.scss
@@ -214,7 +214,7 @@ body {
             flex-direction: column;
             left: 0;
             float: left;
-            min-width: auto;
+            min-width: 100vw;
             height: 100vh;
             min-height: 100vh;
             padding: 0;
@@ -223,15 +223,12 @@ body {
             @include scrollbar-hidden;
 
             .print-area {
-                margin-top: 1rem;
-                display: flex;
                 justify-content: center;
-                width: 100vw;
             }
 
             .print-board {
                 margin: 0.9375rem; // 15px;
-                height: 2.813rem; // 45px
+                height: 4.5rem; // 72px
                 span {
                     float: right;
                     font-size: 16px;
@@ -243,6 +240,7 @@ body {
             }
 
             .drawing-board {
+                margin: 0 auto;
                 display: table;
                 width: $document-content-drawing-board-width;
                 max-width: $document-content-drawing-board-width;
