#9013 [문서 양식] Import 팝업 첨부파일 다국어 오류외 1건
- i18n.msg('file.msg.upload') 관련 수정
- fileuploader-alice-portal.js, fileuploader-alice.js에서 ; 추가
- i18n.init 관련 수정
- 아바타 이미지 속성 수정
- import 팝업 이미지 경로 수정

--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -87,7 +87,7 @@
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
     window.onload = function() {
-        i18n.init(JSON.stringify({}));
+        i18n.init();
 
         hiddenProgressBar();
         fileUploader.avatar({
@@ -99,8 +99,6 @@
                 dropZoneMaxFiles: 1,
                 acceptedFiles: '.png,.jpeg,.jpg,.gif',
                 enableImageThumbnails: true,
-                thumbnailWidth: 150,
-                thumbnailHeight: 150,
                 avatar: {
                     id: [[${users?.avatarId}]],
                     path: [[${users?.avatarPath}]],
