--- a/src/main/resources/public/template/layout/fragments/commonPortalHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonPortalHead.html
@@ -40,7 +40,7 @@
         }, false);
 
         (function() {
-            i18n.init(JSON.stringify({}));
+            i18n.init();
         })();
 
         /* ]]> */
