포탈 검색 스크롤 오류 및 동적 데이터 추가

--- a/src/main/resources/public/assets/css/alice-portal.css
+++ b/src/main/resources/public/assets/css/alice-portal.css
@@ -686,6 +686,9 @@ a {
 .portal-search-result {
   padding: 3.75rem 0 0 12.75rem;
 }
+.portal-search-result .list {
+  height: 550px;
+}
 .portal-search-result .list table {
   width: 100%;
 }
