--- a/src/main/resources/public/src/scss/portal/portal.scss
+++ b/src/main/resources/public/src/scss/portal/portal.scss
@@ -1,3 +1,9 @@
+/*
+ * Copyright 2020 Brainzcompany Co., Ltd.
+ * https://www.brainz.co.kr
+ */
+@charset 'utf-8';
+
 @import "../template/_reset.scss";
 @import "../template/_alignments.scss";
 @import "_variables.scss";
