--- a/src/main/resources/public/src/scss/template/_alerts.scss
+++ b/src/main/resources/public/src/scss/template/_alerts.scss
@@ -1,1 +1,7 @@
-/* template/_alerts.scss */
+/* _alerts.scss 
+ *
+ * 파일 경로 : template/_alerts.scss
+ * @description 알림 모달
+ * @author jy.lim
+ * @vertionn 1.0
+ */
