--- a/src/main/resources/public/src/scss/template/_dropzone.scss
+++ b/src/main/resources/public/src/scss/template/_dropzone.scss
@@ -1,4 +1,10 @@
-/* template/_dropzone.scss */
+/* _dropzone.scss 
+ *
+ * 파일 경로 : template/_dropzone.scss
+ * @description 파일 업로드 관련 디자인
+ * @author wdj
+ * @vertionn 1.0
+ */
 
 $dropzone-font-family:          "Noto Sans KR";
 $dropzone-font-size:            16px;
