--- a/src/main/resources/public/src/scss/template/_scollbars.scss
+++ b/src/main/resources/public/src/scss/template/_scollbars.scss
@@ -1,1 +1,8 @@
-/* template/_scrollbars.scss */
+/* _scrollbars.scss 
+ *
+ * 파일 경로 : template/_scrollbars.scss
+ * @description 스크롤바 디자인
+ * @author wdj
+ * @vertionn 1.0
+ */
+ 
