--- a/src/main/resources/public/src/scss/template/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/template/_thumbnail.scss
@@ -1,4 +1,11 @@
-/* template/_thumbnail.scss */
+/* _thumbnail.scss 
+ *
+ * 파일 경로 : template/_thumbnail.scss
+ * @description 썸네일 디자인
+ * @author jy.lim
+ * @vertionn 1.0
+ */
+
 
 $thumbnail-asset-path: "../media/icons/thumbnail";
 $thumbnail-font-family: "Noto Sans KR";
