--- a/src/main/resources/public/src/scss/template/_tooltip.scss
+++ b/src/main/resources/public/src/scss/template/_tooltip.scss
@@ -1,1 +1,7 @@
-/* template/_tooltip.scss */
+/* _tooltip.scss 
+ *
+ * 파일 경로 : template/_tooltip.scss
+ * @description 툴팁 디자인
+ * @author jy.lim
+ * @vertionn 1.0
+ */
