--- a/src/main/resources/public/src/scss/template/_tree.scss
+++ b/src/main/resources/public/src/scss/template/_tree.scss
@@ -1,1 +1,7 @@
-/* template/_tree.scss */
+/* _tree.scss 
+ *
+ * 파일 경로 : template/_tree.scss
+ * @description 트리 구조 디자인
+ * @author wdj
+ * @vertionn 1.0
+ */
