--- a/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
@@ -1,4 +1,4 @@
-/* 이미지 관리 */
+// 이미지 관리
 $thumbnail-asset-path: "../../../media/icons/thumbnail";
 $thumbnail-font-family: "Noto Sans KR";
 $thumbnail-font-size: 1rem; // 16px;
