--- a/src/main/resources/public/template/sessionInvalid.html
+++ b/src/main/resources/public/template/sessionInvalid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="shortcut icon" th:href="@{/assets/media/icons/zenius.ico}" type="image/x-icon">
-    <link th:href="@{/assets/css/alice-portal.css}" rel="stylesheet"/>
+    <link th:href="@{/assets/css/portal.css}" rel="stylesheet"/>
 </head>
 <body class="session-body">
 <div class="session-div flex-row">
