--- a/src/main/resources/public/src/scss/template/_color-picker.scss
+++ b/src/main/resources/public/src/scss/template/_color-picker.scss
@@ -1,4 +1,10 @@
-/* template/_colorpicker.scss */
+/* _color-picker.scss 
+ *
+ * 파일 경로 : template/_color-picker.scss
+ * @description 컬러 피커 디자인
+ * @author jy.lim
+ * @vertionn 1.0
+ */
 
 .color-picker {
     display: flex;
