--- a/src/main/resources/public/src/scss/template/_date-picker.scss
+++ b/src/main/resources/public/src/scss/template/_date-picker.scss
@@ -1,1 +1,7 @@
-/* template/_datepicker.scss */
+/* _date-picker.scss 
+ *
+ * 파일 경로 : template/_date-picker.scss
+ * @description Date/Time picker 관련 디자인
+ * @author wdj
+ * @vertionn 1.0
+ */
