--- a/src/main/resources/public/src/scss/template/_fonts.scss
+++ b/src/main/resources/public/src/scss/template/_fonts.scss
@@ -1,4 +1,10 @@
-/* template/_fonts.scss */
+/* _fonts.scss 
+ *
+ * 파일 경로 : template/_fonts.scss
+ * @description 폰트 디자인
+ * @author wdj
+ * @vertionn 1.0
+ */
 
 @mixin font-face($name, $path, $format, $style, $weight) {
     @font-face {
