--- a/src/main/resources/public/src/scss/template/_text-editor.scss
+++ b/src/main/resources/public/src/scss/template/_text-editor.scss
@@ -1,7 +1,10 @@
-/* template/_text-editor.scss */
-
-// Customize Quill Editor v1.3.6
-// https://quilljs.com/
+/* _text-editor.scss 
+ *
+ * 파일 경로 : template/_text-editor.scss
+ * @description Customize Quill Editor v1.3.6 (https://quilljs.com/)
+ * @author wdj
+ * @vertionn 1.0
+ */
 
  $quill-font-family:              "Noto Sans KR";
  $quill-font-size:                16px;
