--- a/src/main/resources/public/template/error.html
+++ b/src/main/resources/public/template/error.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" th:href="@{/assets/media/icons/zenius.ico}" type="image/x-icon">
-    <link th:href="@{/assets/css/alice-portal.css}" rel="stylesheet"/>
+    <link th:href="@{/assets/css/portal.css}" rel="stylesheet"/>
     <title th:text="#{error.label.error}"></title>
 </head>
 <body class="error-body">
