--- a/src/main/resources/public/template/form/fragments/formHead.html
+++ b/src/main/resources/public/template/form/fragments/formHead.html
@@ -9,7 +9,7 @@
     <link th:href="@{/assets/vendors/quill/quill.snow.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/gModal/css/gModal.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
-    <link th:href="@{/assets/css/form-designer.css}" rel="stylesheet"/>
+    <link th:href="@{/assets/css/form.css}" rel="stylesheet"/>
     <script th:src="@{/assets/js/util/i18n-alice.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
     <script th:src="@{/assets/js/util/util-alice.js}"></script>
