--- a/src/main/resources/public/template/portal/faq/portalFaqList.html
+++ b/src/main/resources/public/template/portal/faq/portalFaqList.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
-	<link th:href="@{/assets/css/alice-portal.css}" rel="stylesheet"/>
+	<link th:href="@{/assets/css/portal.css}" rel="stylesheet"/>
 </head>
 <body>
 	<div class="list-body">
