--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -7,7 +7,7 @@
 </head>
 <th:block layout:fragment="css">
     <link th:href="@{/assets/css/document.css}" rel="stylesheet"/>
-    <link th:href="@{/assets/theme/{theme}/css/alice-itsm.css(theme=${#authentication.details.theme})}"
+    <link th:href="@{/assets/theme/{theme}/css/itsm.css(theme=${#authentication.details.theme})}"
           rel="stylesheet"/>
     <link th:href="@{/assets/vendors/tagify/tagify.css}" rel="stylesheet"/>
 </th:block>
