#8990 [커스텀코드] 권한 명과 메뉴명 일치
- 권한 리스트 조회 정렬기준 수정
- 필수값 표시 수정

--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -42,7 +42,7 @@
                         <textarea id="txtRoleDesc" name="txtRoleDesc" maxlength="200" rows="7" class="textarea-scroll-wrapper"></textarea>
                     </div>
                     <div class="form-set">
-                        <label th:text="'*' + #{role.label.auth}"></label>
+                        <label th:text="#{role.label.auth}" class="required"></label>
                         <div class="checkbox-list">
                             <ul>
                                 <li th:each="auth : ${authList}">
