--- a/src/main/resources/public/src/scss/theme/default/_container.scss
+++ b/src/main/resources/public/src/scss/theme/default/_container.scss
@@ -7,13 +7,13 @@
 .trash-icon {
     width: 18px;
     height: 20px;
-    background: url("../icons/icon_trash.svg") no-repeat center center;
+    background: url("../../../media/icons/document/icon_trash.svg") no-repeat center center;
     &:hover { background-color: rgba(0,0,0,0);}
 }
 .edit-icon {
     width: 20px;
     height: 20px;
-    background: url("../icons/icon_edit.svg") no-repeat center center;
+    background: url("../../../media/icons/document/icon_edit.svg") no-repeat center center;
     &:hover { background-color: rgba(0,0,0,0);}
 }
 .required::after {
