--- a/src/main/resources/public/template/layout/layout.html
+++ b/src/main/resources/public/template/layout/layout.html
@@ -18,7 +18,7 @@
             }
             /*[/]*/
 
-            window.location.href = '/tokens/search';
+            window.location.href = '/dashboard/view';
 
             //팝업 기능 관련, 쿠키 설정
             function getCookie(name) {
