--- a/src/main/resources/public/src/scss/portal/_elements.scss
+++ b/src/main/resources/public/src/scss/portal/_elements.scss
@@ -71,6 +71,8 @@ option {
     &:focus{color:$alice-primary}
 }
 
+@import "../template/_elements.scss";
+
 select {
     height: 2.5rem; // 40px
     font-size: $element-font-size;
