--- a/src/main/resources/public/src/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/src/scss/theme/default/itsm.scss
@@ -1,26 +1,27 @@
 /*
+ * default itsm.scss
  * Copyright 2020 Brainzcompany Co., Ltd.
  * https://www.brainz.co.kr
  */
 @charset 'utf-8';
 
-@import "../../template/_reset.scss";
-@import "_variables.scss";
-@import "_fonts.scss";
-@import "_mixin.scss";
-@import "_elements.scss";
-@import "_column.scss";
-@import "_container.scss";
-@import "_gnb.scss";
-@import "_notification.scss";
-@import "_fileUploader.scss";
-@import "_datepicker.scss";
-@import "_colorpicker.scss";
-@import "_scrollbar.scss";
-@import "_buttons.scss";
-@import "_alignment.scss";
-@import "_quill.scss";
-@import "_tooltip.scss";
-@import "_thumbnail.scss";
-@import "_reply.scss";
-@import "_tree.scss";
+@import '../../template/_reset.scss'; // 상속 불가
+@import '_variables.scss';
+@import '_fonts.scss';
+@import '_mixin.scss';
+@import '_elements.scss';
+@import '_column.scss';
+@import '_container.scss';
+@import '_gnb.scss';
+@import '_notification.scss';
+@import '_fileUploader.scss';
+@import '_datepicker.scss';
+@import '_colorpicker.scss';
+@import '_scrollbar.scss';
+@import '_buttons.scss';
+@import '_alignment.scss';
+@import '_quill.scss';
+@import '_tooltip.scss';
+@import '_thumbnail.scss';
+@import '_reply.scss';
+@import '_tree.scss';
