--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -1,18 +1,21 @@
 @charset "UTF-8";
 /*
+ * form.scss 
+ *
  * Copyright 2020 Brainzcompany Co., Ltd.
  * https://www.brainz.co.kr
  */
 /* _reset.scss 
  *
  * 파일 경로 : template/_reset.scss
- * @description CSS Reset
- * @author http://meyerweb.com/eric/tools/css/reset/
- * @vertionn 2.0 | 20110126
- * License: none (public domain)
+ * @description Customize CSS Reset (http://meyerweb.com/eric/tools/css/reset/)
+ * @author wdj
+ * @vertionn 1.0
  */
+*,
 *::before,
 *::after {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -37,7 +40,6 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
@@ -66,39 +68,8 @@ table {
   border-spacing: 0;
 }
 
-input, button, select, optgroup, textarea {
-  margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
-
-a:link {
-  text-decoration: none;
-  color: inherit;
-}
-
-a:visited {
-  text-decoration: none;
-  color: inherit;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-a:active {
-  text-decoration: none;
-}
-
-button {
-  background: inherit;
-  border: none;
-  box-shadow: none;
-  border-radius: 0;
-  padding: 0;
-  overflow: visible;
-  cursor: pointer;
+template {
+  display: none;
 }
 
 /* _fonts.scss 
@@ -150,304 +121,83 @@ button {
   font-weight: 900;
 }
 
-/* 폼 디자이너 팝업 layout
- * container - toolbar : 상단 메뉴
- *           - contents : 왼쪽 패널
- *                   - drawing-board : 실제 컴포넌트들이 그려지는 영역
- *           - aside : 오른쪽 패널
+/* _elements.scss 
+ *
+ * 파일 경로 : template/_elements.scss
+ * @description HTML element 디자인
+ * @author wdj
+ * @vertionn 1.0
  */
-*,
-*::after,
-*::before {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
-  font-size: 1rem;
-}
-
-.container-form {
-  width: 100vw;
-  height: 100vh;
-  min-width: 93.75rem;
-  min-height: 56.25rem;
-  padding: 0;
+input, button, select, optgroup, textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1;
   margin: 0;
-  background-color: #F7F8F9;
 }
 
-.container-form *:focus {
-  outline: none !important;
+a:link {
+  text-decoration: none;
+  color: inherit;
 }
 
-.container-form .toolbar {
-  width: 100vw;
-  height: 3.125rem;
-  font-size: 18px;
-  font-weight: 500;
-  color: #ffffff;
-  background-color: #0098FF;
-  padding: 0.9375rem 1.25rem;
+a:visited {
+  text-decoration: none;
+  color: inherit;
 }
 
-.container-form .toolbar svg.logo {
-  float: left;
+a:hover {
+  text-decoration: none;
 }
 
-.container-form .toolbar span.name {
-  float: left;
-  padding: 0 1.25rem;
-  line-height: 1.25rem;
+a:active {
+  text-decoration: none;
 }
 
-.container-form .toolbar span.separator {
-  width: 0.063rem;
-  height: 1.25rem;
-  background-color: #ffffff;
-  margin-right: 1.25rem;
-  float: left;
-  opacity: 0.3;
-}
-
-.container-form .toolbar a {
-  height: 1.25rem;
-  line-height: 1.25rem;
-  margin-right: 1.25rem;
-  float: left;
-}
-
-.container-form .toolbar a img {
+button {
+  background: inherit;
+  border: none;
+  box-shadow: none;
+  border-radius: 0;
+  padding: 0;
+  overflow: visible;
   cursor: pointer;
 }
 
-.container-form .toolbar span.form-name {
-  height: 1.25rem;
-  line-height: 1.25rem;
-  font-size: 16px;
-  line-height: 1.25rem;
-  float: right;
-}
-
-.container-form .contents {
-  display: flex;
-  justify-content: center;
-  left: 0;
-  top: 3.125rem;
-  width: calc(100vw - 18.75rem);
-  height: calc(100vh - 3.125rem);
-  min-width: calc(100vw - 18.75rem);
-  min-height: calc(100vh - 3.125rem);
-  float: left;
-  padding: 0;
-  margin: 0;
-  overflow-y: auto;
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
-}
-
-.container-form .contents::-webkit-scrollbar {
-  display: none;
-  /* Chrome, Safari, Opera*/
-}
-
-.container-form .contents .drawing-board {
-  display: table;
-  width: 59.38rem;
-  max-width: 59.38rem;
-  min-height: 100%;
-  margin-top: 6.563rem;
-  margin-bottom: 6.563rem;
-  padding: 6.25rem 4.063rem;
-  background-color: #ffffff;
-  border: 0.0625rem solid #EBEBEB;
-  box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
-}
-
-.container-form .contents .drawing-board[data-readonly=true] .dropzone,
-.container-form .contents .drawing-board[data-readonly=true] .ql-toolbar,
-.container-form .contents .drawing-board[data-readonly=true] textarea,
-.container-form .contents .drawing-board[data-readonly=true] button,
-.container-form .contents .drawing-board[data-readonly=true] input[type=text],
-.container-form .contents .drawing-board[data-readonly=true] input[type=button],
-.container-form .contents .drawing-board[data-readonly=true] label.checkbox-group,
-.container-form .contents .drawing-board[data-readonly=true] label.radio-group,
-.container-form .contents .drawing-board[data-readonly=true] select {
-  pointer-events: none;
-}
-
-.container-form .contents .drawing-board[data-readonly=true] .component .move-handler {
-  display: inherit;
-}
-
-.container-form .aside {
-  display: flex;
-  flex: 0 0 auto;
-  flex-direction: column;
-  float: left;
-  right: 0;
-  top: 3.125rem;
-  width: 18.75rem;
-  height: calc(100vh - 3.125rem);
-  min-height: calc(100vh - 3.125rem);
-  background-color: #ffffff;
-  box-shadow: -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.6);
-  overflow-y: auto;
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
-}
-
-.container-form .aside::-webkit-scrollbar {
-  display: none;
-  /* Chrome, Safari, Opera*/
-}
-
-.container-document {
-  display: flex;
-  justify-content: center;
-  width: 100vw;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
-  background-color: #F7F8F9;
-  overflow: auto;
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
-}
-
-.container-document::-webkit-scrollbar {
-  display: none;
-  /* Chrome, Safari, Opera*/
-}
-
-.container-document *:focus {
-  outline: none !important;
-}
-
-.container-document .contents {
-  display: flex;
-  flex-direction: column;
-  left: 0;
-  float: left;
-  height: 100vh;
-  min-width: auto;
-  min-height: 100vh;
-  padding: 0;
+input, button, select, optgroup, textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1;
   margin: 0;
 }
 
-.container-document .contents .button-board {
-  display: flex;
-  align-items: center;
-  padding-bottom: 0.9375rem;
-  width: 61.56rem;
-  max-width: 61.56rem;
-  padding-top: 8.438rem;
-  justify-content: flex-end;
+a:link {
+  text-decoration: none;
+  color: inherit;
 }
 
-.container-document .contents .button-board-document {
-  display: flex;
-  align-items: center;
-  padding-bottom: 0.9375rem;
-  width: 61.56rem;
-  max-width: 61.56rem;
-  padding-top: 8.438rem;
-  justify-content: space-between;
+a:visited {
+  text-decoration: none;
+  color: inherit;
 }
 
-.container-document .contents .button-board-document > .numbering-content label {
-  color: #ACB4BF;
+a:hover {
+  text-decoration: none;
 }
 
-.container-document .contents .drawing-board {
-  display: table;
-  width: 61.56rem;
-  max-width: 61.56rem;
-  min-height: 100%;
-  padding: 6.25rem 4.063rem;
-  background-color: #ffffff;
-  border: 0.0625rem solid #EBEBEB;
-  box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
-  margin-bottom: 6.563rem;
-  margin-top: 0.625rem;
+a:active {
+  text-decoration: none;
 }
 
-.container-print {
-  width: 100vw;
-  height: 100vh;
+button {
+  background: inherit;
+  border: none;
+  box-shadow: none;
+  border-radius: 0;
   padding: 0;
-  margin: 0;
+  overflow: visible;
+  cursor: pointer;
 }
 
-.container-print *:focus {
-  outline: none !important;
-}
-
-.container-print .contents {
-  display: flex;
-  flex-direction: column;
-  left: 0;
-  float: left;
-  min-width: 100vw;
-  height: 100vh;
-  min-height: 100vh;
-  padding: 0;
-  margin: 0;
-  overflow: auto;
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
-}
-
-.container-print .contents::-webkit-scrollbar {
-  display: none;
-  /* Chrome, Safari, Opera*/
-}
-
-.container-print .contents .print-area {
-  justify-content: center;
-}
-
-.container-print .contents .print-board {
-  margin: 0.9375rem;
-  height: 4.5rem;
-}
-
-.container-print .contents .print-board span {
-  float: right;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  color: #000000;
-  text-align: right;
-}
-
-.container-print .contents .drawing-board {
-  margin: 0 auto;
-  display: table;
-  width: 61.56rem;
-  max-width: 61.56rem;
-  min-height: 100%;
-  padding: 6.25rem 4.063rem;
-  background-color: #ffffff;
-  border: 0.0625rem solid #EBEBEB;
-  box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
-}
-
-.container-print .contents .drawing-board .component {
-  page-break-inside: avoid;
-}
-
-/* H1 ~ H6 */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Noto Sans KR";
   font-weight: 500;
@@ -799,6 +549,303 @@ table tr th {
 
 table tr th {
   font-weight: 500;
+}
+
+/* 폼 디자이너 팝업 layout
+ * container - toolbar : 상단 메뉴
+ *           - contents : 왼쪽 패널
+ *                   - drawing-board : 실제 컴포넌트들이 그려지는 영역
+ *           - aside : 오른쪽 패널
+ */
+*,
+*::after,
+*::before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
+  font-size: 1rem;
+}
+
+.container-form {
+  width: 100vw;
+  height: 100vh;
+  min-width: 93.75rem;
+  min-height: 56.25rem;
+  padding: 0;
+  margin: 0;
+  background-color: #F7F8F9;
+}
+
+.container-form *:focus {
+  outline: none !important;
+}
+
+.container-form .toolbar {
+  width: 100vw;
+  height: 3.125rem;
+  font-size: 18px;
+  font-weight: 500;
+  color: #ffffff;
+  background-color: #0098FF;
+  padding: 0.9375rem 1.25rem;
+}
+
+.container-form .toolbar svg.logo {
+  float: left;
+}
+
+.container-form .toolbar span.name {
+  float: left;
+  padding: 0 1.25rem;
+  line-height: 1.25rem;
+}
+
+.container-form .toolbar span.separator {
+  width: 0.063rem;
+  height: 1.25rem;
+  background-color: #ffffff;
+  margin-right: 1.25rem;
+  float: left;
+  opacity: 0.3;
+}
+
+.container-form .toolbar a {
+  height: 1.25rem;
+  line-height: 1.25rem;
+  margin-right: 1.25rem;
+  float: left;
+}
+
+.container-form .toolbar a img {
+  cursor: pointer;
+}
+
+.container-form .toolbar span.form-name {
+  height: 1.25rem;
+  line-height: 1.25rem;
+  font-size: 16px;
+  line-height: 1.25rem;
+  float: right;
+}
+
+.container-form .contents {
+  display: flex;
+  justify-content: center;
+  left: 0;
+  top: 3.125rem;
+  width: calc(100vw - 18.75rem);
+  height: calc(100vh - 3.125rem);
+  min-width: calc(100vw - 18.75rem);
+  min-height: calc(100vh - 3.125rem);
+  float: left;
+  padding: 0;
+  margin: 0;
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.container-form .contents::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera*/
+}
+
+.container-form .contents .drawing-board {
+  display: table;
+  width: 59.38rem;
+  max-width: 59.38rem;
+  min-height: 100%;
+  margin-top: 6.563rem;
+  margin-bottom: 6.563rem;
+  padding: 6.25rem 4.063rem;
+  background-color: #ffffff;
+  border: 0.0625rem solid #EBEBEB;
+  box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
+}
+
+.container-form .contents .drawing-board[data-readonly=true] .dropzone,
+.container-form .contents .drawing-board[data-readonly=true] .ql-toolbar,
+.container-form .contents .drawing-board[data-readonly=true] textarea,
+.container-form .contents .drawing-board[data-readonly=true] button,
+.container-form .contents .drawing-board[data-readonly=true] input[type=text],
+.container-form .contents .drawing-board[data-readonly=true] input[type=button],
+.container-form .contents .drawing-board[data-readonly=true] label.checkbox-group,
+.container-form .contents .drawing-board[data-readonly=true] label.radio-group,
+.container-form .contents .drawing-board[data-readonly=true] select {
+  pointer-events: none;
+}
+
+.container-form .contents .drawing-board[data-readonly=true] .component .move-handler {
+  display: inherit;
+}
+
+.container-form .aside {
+  display: flex;
+  flex: 0 0 auto;
+  flex-direction: column;
+  float: left;
+  right: 0;
+  top: 3.125rem;
+  width: 18.75rem;
+  height: calc(100vh - 3.125rem);
+  min-height: calc(100vh - 3.125rem);
+  background-color: #ffffff;
+  box-shadow: -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.6);
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.container-form .aside::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera*/
+}
+
+.container-document {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  background-color: #F7F8F9;
+  overflow: auto;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.container-document::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera*/
+}
+
+.container-document *:focus {
+  outline: none !important;
+}
+
+.container-document .contents {
+  display: flex;
+  flex-direction: column;
+  left: 0;
+  float: left;
+  height: 100vh;
+  min-width: auto;
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+}
+
+.container-document .contents .button-board {
+  display: flex;
+  align-items: center;
+  padding-bottom: 0.9375rem;
+  width: 61.56rem;
+  max-width: 61.56rem;
+  padding-top: 8.438rem;
+  justify-content: flex-end;
+}
+
+.container-document .contents .button-board-document {
+  display: flex;
+  align-items: center;
+  padding-bottom: 0.9375rem;
+  width: 61.56rem;
+  max-width: 61.56rem;
+  padding-top: 8.438rem;
+  justify-content: space-between;
+}
+
+.container-document .contents .button-board-document > .numbering-content label {
+  color: #ACB4BF;
+}
+
+.container-document .contents .drawing-board {
+  display: table;
+  width: 61.56rem;
+  max-width: 61.56rem;
+  min-height: 100%;
+  padding: 6.25rem 4.063rem;
+  background-color: #ffffff;
+  border: 0.0625rem solid #EBEBEB;
+  box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
+  margin-bottom: 6.563rem;
+  margin-top: 0.625rem;
+}
+
+.container-print {
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+}
+
+.container-print *:focus {
+  outline: none !important;
+}
+
+.container-print .contents {
+  display: flex;
+  flex-direction: column;
+  left: 0;
+  float: left;
+  min-width: 100vw;
+  height: 100vh;
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+  overflow: auto;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.container-print .contents::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera*/
+}
+
+.container-print .contents .print-area {
+  justify-content: center;
+}
+
+.container-print .contents .print-board {
+  margin: 0.9375rem;
+  height: 4.5rem;
+}
+
+.container-print .contents .print-board span {
+  float: right;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #000000;
+  text-align: right;
+}
+
+.container-print .contents .drawing-board {
+  margin: 0 auto;
+  display: table;
+  width: 61.56rem;
+  max-width: 61.56rem;
+  min-height: 100%;
+  padding: 6.25rem 4.063rem;
+  background-color: #ffffff;
+  border: 0.0625rem solid #EBEBEB;
+  box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
+}
+
+.container-print .contents .drawing-board .component {
+  page-break-inside: avoid;
 }
 
 /* button 공통 */
