--- a/src/main/resources/public/src/scss/form/_elements.scss
+++ b/src/main/resources/public/src/scss/form/_elements.scss
@@ -1,4 +1,5 @@
-/* H1 ~ H6 */
+@import "../template/_elements.scss";
+
 h1, h2, h3, h4, h5, h6 {
     font-family: $headings-font-family;
     font-weight: $headings-font-weight;
