--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -6,3 +6,34 @@
  * @vertionn 1.0
  */
  
+ input, button, select, optgroup, textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1;
+  margin: 0;
+}
+
+a:link{text-decoration: none; color: inherit;}
+a:visited{text-decoration: none; color: inherit;}
+a:hover{text-decoration: none;}
+a:active{text-decoration: none;}
+
+button{
+  background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; overflow:visible; cursor:pointer
+}
+
+input, button, select, optgroup, textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1;
+  margin: 0;
+}
+
+a:link{text-decoration: none; color: inherit;}
+a:visited{text-decoration: none; color: inherit;}
+a:hover{text-decoration: none;}
+a:active{text-decoration: none;}
+
+button{
+  background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; overflow:visible; cursor:pointer
+}
