#9152 [문서함] 태그 최대 길이 제한 및 스크롤 디자인
- 디자인 수정

--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -115,8 +115,8 @@
                     <div id="comment-container" class="comment comment-input"></div>
                 </div>
                 <div class="token-tag">
-                    <div style="margin-bottom: 1rem;">
-                        <input name="tags" th:value="|${tagList}|"/>
+                    <div class="tag-input">
+                        <input name="tags" id="tags" th:value="|${tagList}|"/>
                     </div>
                 </div>
             </div>
