--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -889,6 +889,25 @@ span.vertical-bar {
   margin-top: 1.25rem;
 }
 
+.container-document .token-info-contents .token-tag .tag-input tags > span {
+  min-width: 26.875rem;
+}
+
+.container-document .token-info-contents .token-tag .tag-input tag div {
+  background: rgba(229,	229, 229, 1);
+  max-width: 27.6875rem;
+  border-radius: 0.1875rem;
+}
+
+.container-document .token-info-contents .token-tag .tag-input tag div:hover {
+  background: rgba(211, 226, 226, 1);
+}
+
+.container-document .token-info-contents .token-tag .tag-input tag span {
+  max-width: 26.875rem;
+  white-space: pre-line;
+}
+
 .container-document .token-info-contents .token-history {
   height: 100%;
 }
